{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 448,
  "lineage": "ac3c316a-9aca-4944-04e7-0bcd6da197f0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.223.46.231",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-12T05:09:54.026-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gke-demo-haowei/regions/us-central1/addresses/nat-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "nat-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "gke-demo-haowei",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/addresses/nat-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/routers/router"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-12T05:10:42.254-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gke-demo-haowei/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "priority": 1000,
            "project": "gke-demo-haowei",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "cloud_build_private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.238.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-07-12T05:10:34.390-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/gke-demo-haowei/global/addresses/gke-deploy-private-pool-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gke-deploy-private-pool-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "prefix_length": 20,
            "project": "gke-demo-haowei",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/addresses/gke-deploy-private-pool-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gke-demo-haowei/global/networks/main",
            "mtu": 0,
            "name": "main",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6852318499304369790",
            "numeric_id": "6852318499304369790",
            "project": "gke-demo-haowei",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-12T05:10:42.355-07:00",
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gke-demo-haowei/global/routes/default-route",
            "name": "default-route",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "params": [],
            "priority": 1000,
            "project": "gke-demo-haowei",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/routes/default-route",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-12T05:10:30.719-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gke-demo-haowei/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "project": "gke-demo-haowei",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/routers/router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gke-demo-haowei/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/addresses/nat-ip"
            ],
            "project": "gke-demo-haowei",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.private",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Protect nginx ingress",
            "fingerprint": "SmyKFYwnsyU=",
            "id": "projects/gke-demo-haowei/global/securityPolicies/nginx-cloud-armor-policy",
            "name": "nginx-cloud-armor-policy",
            "project": "gke-demo-haowei",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default rule, allow all other traffic",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block traffic from India",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "origin.region_code == 'IN'"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/securityPolicies/nginx-cloud-armor-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-12T05:10:43.525-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.32.1",
            "id": "projects/gke-demo-haowei/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.0.32.0/19",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-demo-haowei",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/14",
                "range_name": "k8s-pods"
              },
              {
                "ip_cidr_range": "172.20.0.0/18",
                "range_name": "k8s-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/subnetworks/private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1199306003420540460
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-12T05:10:44.105-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/gke-demo-haowei/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.0.0.0/19",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gke-demo-haowei",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gke-demo-haowei/regions/us-central1/subnetworks/public",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1158698483501231659
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.api"
          ]
        }
      ]
    }
  ]
}